OpenShift-deployment/vllm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
  namespace: llama-infer2
  labels:
    app: vllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vllm
    spec:
      volumes:
        - name: models-cache
          persistentVolumeClaim:
            claimName: llama-pvc2
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
      containers:
        - name: server
          image: quay.io/rh-aiservices-bu/vllm-cpu-openai-ubi9:0.3
          imagePullPolicy: IfNotPresent
          args:
            - "--model"
            - "TinyLlama/TinyLlama-1.1B-Chat-v1.0"
            - "--download-dir"
            - "/models-cache"
            - "--max-model-len"
            - "2048"
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 8Gi
            requests:
              cpu: "1"
              memory: 4Gi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: models-cache
              mountPath: /models-cache
            - name: shm
              mountPath: /dev/shm
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 100
            timeoutSeconds: 8
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 24
      restartPolicy: Always
      terminationGracePeriodSeconds: 120
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
