OpenShift-deployment/vllm-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-statutory-perch
  namespace: llama-infer2
spec:
  host: vllm-route-llama-infer2.apps.example.com
  path: /
  to:
    kind: Service
    name: vllm-service
    weight: 100
  port:
    targetPort: 8000
  wildcardPolicy: None
